--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Bot Telegram avec keep alive",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "build": "npm install"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "telegraf": "^4.16.3",
-    "dotenv": "^16.4.5"
+    "telegraf": "^4.16.3"
   }
 }
